--- a/templates/welcomeAdmin.hbs
+++ b/templates/welcomeAdmin.hbs
@@ -90,7 +90,7 @@
     <div class="header">
       <!-- Optional: Add Wuragold Foundation logo -->
       <!-- <img src="https://yourdomain.com/wuragold-logo.png" alt="Wuragold Foundation Logo" class="logo" /> -->
-      <h1>Welcome to Wuragold Foundation</h1>
+      <h1>Wuragold Foundation</h1>
     </div>
     <div class="content">
       <h2>Hello {{firstName}},</h2>
